--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo"> A Reserva Florestal de Figueira </button>
-                <button class="botao">Criar projetos em Javascript</button>
+                <button class="botao">A Estação Ecológica do Rio dos Touros</button>
                 <button class="botao">Viajar para a Europa</button>
                 <button class="botao">Comprar celular </button>
             </div>
