--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <div class="botoes">
                 <button class="botao ativo"> A Reserva Florestal de Figueira </button>
                 <button class="botao">A Estação Ecológica do Rio dos Touros</button>
-                <button class="botao">Viajar para a Europa</button>
+                <button class="botao">Estação Ecológica da Ilha do Mel</button>
+                <button class="botao">Comprar celular </button>
+                <button class="botao">Comprar celular </button>
+                <button class="botao">Comprar celular </button>
                 <button class="botao">Comprar celular </button>
             </div>
             <div class="abas-textos">
