--- a/index.html
+++ b/index.html
@@ -40,12 +40,19 @@
                     <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Mensurável do 4º objetivo</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Mensurável do 5º objetivo</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"></div>
                 </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Mensurável do 6º objetivo</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
             </div>
-        </div>
+        </div><div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Mensurável do 7º objetivo</h3>
+            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            <div class="contador"></div>
     </section>
     
     <script src="main.js"></script>
