--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         alt+shift+f identa o código
     -->
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano.<span>_</span></h2>
+    <h2 class="titulo-principal">matas preservadas do paraná.<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo"> A Reserva Florestal de Figueira </button>
                 <button class="botao">A Estação Ecológica do Rio dos Touros</button>
                 <button class="botao">Estação Ecológica da Ilha do Mel</button>
-                <button class="botao">Comprar celular </button>
-                <button class="botao">Comprar celular </button>
-                <button class="botao">Comprar celular </button>
-                <button class="botao">Comprar celular </button>
+                <button class="botao">lll</button>
+                <button class="botao">kkkk</button>
+                <button class="botao">pppp</button>
+                <button class="botao">Cccc</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
@@ -40,20 +40,23 @@
                     <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Mensurável do 5º objetivo</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Mensurável do 4º objetivo</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Mensurável do 6º objetivo</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Mensurável do 5º objetivo</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"></div>
             </div>
-        </div><div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Mensurável do 7º objetivo</h3>
+        </div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Mensurável do 6º objetivo</h3>
             <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
             <div class="contador"></div>
-    </section>
+       </div>
+    </div>
+  </div>
+</section>
     
     <script src="main.js"></script>
 </body>
