--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         alt+shift+f identa o código
     -->
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano.<span>_</span></h2>
+    <h2 class="titulo-principal">preservação ambiental (paraná).<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Curso de Javascript na Alura</button>
