--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h2 class="titulo-principal">preservação ambiental (paraná).<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Curso de Javascript na Alura</button>
-                <button class="botao">Criar projetos em Javascript</button>
+                <button class="botao ativo">Estação Ecológica da Ilha do Mel.</button>
+                <button class="botao">Refúgio da Vida Silvestre do Pinhão.</button>
                 <button class="botao">Viajar para a Europa</button>
                 <button class="botao">Comprar celular </button>
             </div>
