--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
                     <h3 class="aba-conteudo-titulo-principal">Mensurável do 1º objetivo</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h4 class="aba-conteudo-titulo-secundario">tempo de preservação</h4>
                     <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
