--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">img/https://www.google.com/url?sa=i&url=https%3A%2F%2Fpranchanova.com%2Fconteudo%2Fanalise-do-pico-ilha-do-mel-pr%2F&psig=AOvVaw1vVeOxMddhdX5z2hb1vTuN&ust=1723040180866000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMCL7YLH4IcDFQAAAAAdAAAAABAT</h3>
+                    <h3 class="aba-conteudo-titulo-principal">img/https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.civitatis.com%2Fbr%2Fcuritiba%2Fexcursao-ilha-mel%2F&psig=AOvVaw0K5u8hU6Ss9uw2vxFxR2GG&ust=1723166986500000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLjy97Wf5IcDFQAAAAAdAAAAABAE<
                     <h4 class="aba-conteudo-titulo-secundario">tempo de preservação</h4>
                     <div class="contador"></div>
                 </div>
